--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qs": "^6.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "svix": "^1.44.0",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
@@ -30,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "^20",
+    "@types/qs": "^6.9.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
